updated index again
once agin

--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@ https://templatemo.com/tm-561-purple-buzz
             <a class="navbar-brand h1" href="index.html">
                 <span class="text-dark h4">Road</span> <span class="text-primary h4">Safe</span>
             </a>
-            <
+<!--             <
             class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-toggler-success" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
-            </button>
+            </button> -->
 
             <div class="align-self-center collapse navbar-collapse flex-fill  d-lg-flex justify-content-lg-between" id="navbar-toggler-success">
                 <div class="flex-fill mx-xl-5 mb-2">
